syntax = "proto3";

package currency;

service CurrencyService {
  rpc FindAll(FindAllRequest) returns (FindAllResponse);
}

message FindAllRequest {
}

message Currency {
  string uuid = 1;
  string name = 2;
  double currentExchangeRate = 3;
}

message PageMeta {
  int32 page = 1;
  int32 take = 2;
  int32 itemCount = 3;
  int32 pageCount = 4;
}

message FindAllResponse {
  repeated Currency currencies = 1;
  PageMeta meta = 2;
}
